# mcap_builder

./: .gitignore  README.md  convert_mcap_rosbag.py  main.py  main_test.py  main_test_2.py  pyproject.toml  requirements.txt  test.html  test.py
aloha_lerobot/: build.py  config.py  requirement.txt  test_build_multiproces.py
aloha_raw/: build.py  requirement.txt
mcap_example/: mcap_2_rosbag.py  mcap_reader.py  mcap_writer.py
rh20t/: __init__.py  build.py  config.py
schema/: 14dof.json  2dof.json  compressed_image.json  xyz_quat.json
