[project]
name = "mcap-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "h5py>=3.13.0",
    "lerobot",
    "tqdm>=4.67.1",
    "tyro>=0.9.16",
]

[tool.uv.sources]
lerobot = { git = "https://github.com/huggingface/lerobot", rev = "6674e368249472c91382eb54bb8501c94c7f0c56" }
